--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -7,10 +7,13 @@
         font-weight: bolder;
         margin: 25px 0px 25px 25px;
     }
+
+    width: 100%;
 }
 .products{
     display: grid;
     grid-template-columns: repeat(2 , 40%);
     justify-content: space-around;
     align-items: center;
+    overflow: hidden;
 }
