--- a/src/styles/pages/payment.scss
+++ b/src/styles/pages/payment.scss
@@ -26,4 +26,15 @@
             color: $color-oscuro;
         }
     }
+    &__button{
+        width: 80%;
+        margin : 50px auto;
+        position: relative;
+        z-index: 0;
+    }
+    &__error{
+        font-size: 1.8rem;
+        color: red;
+        text-align: center;
+    }
 }
