--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -6,7 +6,9 @@
         background: $color-primary;
         height: 100vh;
         width: 100vw;
+        max-width: 400px;
         transform: translateX(-100%);
+        opacity: 0;
         position:fixed;
         transition: 1s;
         z-index: 99;
