--- a/src/styles/pages/order.scss
+++ b/src/styles/pages/order.scss
@@ -20,9 +20,10 @@
         border-radius: 10px;
         padding: 15px;
         img{
-            width: 100%;
+            width: 70%;
             height: auto;
-            margin: 0 0 25px;
+            display: block;
+            margin: 0 auto 25px;
         }
         &__title{
             font-size: 2rem;
@@ -78,5 +79,21 @@
         margin: 10px auto;
         border: none;
         border-radius: 10px;
+    }
+    &-delivery{
+        &__title{
+            font-size: 3.5rem;
+            text-transform: uppercase;
+            text-align: center;
+            font-family: monospace;
+            margin: 25px 0;
+        }
+        &__info{
+            font-size: 1.5rem;
+            font-weight: 100;
+            color: $color-oscuro;
+            text-align: center;
+            margin: 15px 0;
+        }
     }
 }
