--- a/src/styles/pages/cart.scss
+++ b/src/styles/pages/cart.scss
@@ -13,6 +13,7 @@
         display: flex;
         justify-items: right;
         width: 100%;
+        max-width: 400px;
         border-top: $color-oscuro solid 1px;
         border-bottom: $color-oscuro solid 1px;
         padding: 10px 0;
