Terminando con el estilo de los botones

--- a/src/styles/pages/payment.scss
+++ b/src/styles/pages/payment.scss
@@ -31,6 +31,20 @@
         margin : 50px auto;
         position: relative;
         z-index: 0;
+        &__alternative{
+            background-color: $color-primary;
+            color: $color-claro;
+            padding: 10px;
+            font-size: 1.5rem;
+            width: 60%;
+            margin: 25px auto;
+            display: block;
+            border: none;
+            border-radius: 10px;
+            &:hover{
+                cursor: pointer;
+            }
+        }
     }
     &__error{
         font-size: 1.8rem;
